# dxdy.draw

./: .gitmodules  Cargo.toml  LICENSE  README.md
reference/: README.md  pyproject.toml
src/: main.rs  pos.rs  shape.rs
src/algorithm/: differential_line.rs  mod.rs  segments.rs  zone_map.rs
